Attempt to add Parallax support for the Moon

--- a/GameData/RealSolarSystem/RSSKopernicus/Earth/Moon.cfg
+++ b/GameData/RealSolarSystem/RSSKopernicus/Earth/Moon.cfg
@@ -10,7 +10,8 @@
 		Template
 		{
 			name = Mun
-			removePQSMods = PQSCity, PQSLandControl, PQSMod_AltitudeAlpha, PQSMod_VoronoiCraters, PQSMod_FlattenArea, PQSMod_VertexHeightNoiseVertHeight, PQSMod_VertexHeightMap
+			// removePQSMods = PQSCity, PQSLandControl, PQSMod_AltitudeAlpha, PQSMod_VoronoiCraters, PQSMod_FlattenArea, PQSMod_VertexHeightNoiseVertHeight, PQSMod_VertexHeightMap
+			removeAllPQSMods = true
 		}
 		Orbit
 		{
@@ -198,7 +199,7 @@
 			deactivateAltitude = 167000
 			fadeStart = 102000
 			fadeEnd = 127000
-			
+
 			materialType = AtmosphericTriplanarZoomRotation
 			Material
 			{
@@ -209,7 +210,7 @@
 				saturation = 1
 				contrast = 1.3
 				tintColor = 1,1,1,0
-				specularColor = 0,0,0,0
+				specularColor = 0.02,0.01,0,1
 				albedoBrightness = 1.1
 
 				steepPower = 1
@@ -260,6 +261,12 @@
 
 			Mods
 			{
+				Subdivide
+				{
+					subdivisionLevel = 8
+					order = 201
+				}
+
 				VertexColorMap
 				{
 					map = RSS-Textures/MoonColor.dds
