Restructuring files to make Parallax work and confging mars

--- a/GameData/RealSolarSystem/Patches/Parallax.cfg
+++ b/GameData/RealSolarSystem/Patches/Parallax.cfg
@@ -5,20 +5,20 @@ Parallax
 		name = Moon
 		Textures
 		{
-			surfaceTexture = RealSolarSystem/Terrain/PluginData/PAR_Lune_Diffuse3
-			surfaceTextureMid = RealSolarSystem/Terrain/PluginData/PAR_Lune_Diffuse3
-			surfaceTextureHigh = RealSolarSystem/Terrain/PluginData/PAR_Lune_Diffuse3
-			surfaceTessellationMap = RealSolarSystem/Terrain/PluginData/PAR_Lune_Displacement2
-			surfaceTextureBumpMap = RealSolarSystem/Terrain/PluginData/PAR_Lune_Normal2
-			surfaceBumpMapMid = RealSolarSystem/Terrain/PluginData/PAR_Lune_Normal2
+			surfaceTexture = RealSolarSystem/Terrain/Parallax/PAR_Lune_Diffuse3
+			surfaceTextureMid = RealSolarSystem/Terrain/Parallax/PAR_Lune_Diffuse3
+			surfaceTextureHigh = RealSolarSystem/Terrain/Parallax/PAR_Lune_Diffuse3
+			surfaceTessellationMap = RealSolarSystem/Terrain/Parallax/PAR_Lune_Displacement2
+			surfaceTextureBumpMap = RealSolarSystem/Terrain/Parallax/PAR_Lune_Normal2
+			surfaceBumpMapMid = RealSolarSystem/Terrain/Parallax/PAR_Lune_Normal2
 			surfaceBumpMapHigh = RealSolarSystem/Terrain/PluginData/PAR_Lune_Normal2
 			influenceMap = RealSolarSystem/Terrain/PluginData/PAR_Lune_Influence2
 
 			steepPower = 8
 			surfaceTextureScale = 0.03
-
+			
 			tessellationHeight = 2
-			steepTextureScale = 0.01
+			steepTextureScale = 0.02
 			smoothness = 0.2
 			tintColor = 0.500, 0.500, 0.500
 			lowStart = 45
@@ -29,5 +29,37 @@ Parallax
 			hasWater = false
 			reflectionMask = 1,0,0,0
 		}
+	}
+	Body
+	{
+		name = Mars
+        Textures
+        {
+            surfaceTexture = RealSolarSystem/Terrain/Parallax/Marsv2_Diffuse3
+            surfaceTextureMid = RealSolarSystem/Terrain/Parallax/Marsv2_Diffuse3
+            surfaceTextureHigh = RealSolarSystem/Terrain/Parallax/Marsv2_Diffuse3
+            surfaceTessellationMap = RealSolarSystem/Terrain/Parallax/Marsv2_Displacement4
+            surfaceTextureBumpMap = RealSolarSystem/Terrain/Parallax/Marsv2_Normal
+            surfaceBumpMapMid = RealSolarSystem/Terrain/Parallax/Marsv2_Normal
+            surfaceBumpMapHigh = RealSolarSystem/Terrain/Parallax/Marsv2_Normal
+            steepTexture = RealSolarSystem/Terrain/Parallax/Marsv2_Diffuse3
+            surfaceBumpMapSteep = RealSolarSystem/Terrain/Parallax/Marsv2_Normal
+            influenceMap = RealSolarSystem/Terrain/Parallax/Marsv2_Influence2
+
+            steepPower = 8
+            surfaceTextureScale = 0.02
+
+            tessellationHeight = 2
+            steepTextureScale = 0.01
+            smoothness = 0.2
+            tintColor = 0.500, 0.500, 0.500
+            lowStart = 45
+            lowEnd = 175
+            highStart = 1750
+            highEnd = 2500
+            planetIsAtmospheric = true
+            hasWater = false
+            reflectionMask = 0,0,0,0
+        }
 	}
 }
