--- a/GameData/RealSolarSystem/RSSKopernicus/Earth/Moon.cfg
+++ b/GameData/RealSolarSystem/RSSKopernicus/Earth/Moon.cfg
@@ -10,7 +10,6 @@
 		Template
 		{
 			name = Mun
-			// removePQSMods = PQSCity, PQSLandControl, PQSMod_AltitudeAlpha, PQSMod_VoronoiCraters, PQSMod_FlattenArea, PQSMod_VertexHeightNoiseVertHeight, PQSMod_VertexHeightMap
 			removeAllPQSMods = true
 		}
 		Orbit
@@ -184,8 +183,8 @@
 			fadeEnd = 102000
 			Material
 			{
-				texture = RSS-Textures/MoonColor
-				normals = RSS-Textures/Moon_NRM
+				texture = RSS-Textures/MoonColor.dds
+				normals = RSS-Textures/Moon_NRM.dds
 				shininess = 0.05
 				specular = 0,0,0,1
 			}
@@ -263,7 +262,7 @@
 			{
 				Subdivide
 				{
-					subdivisionLevel = 8
+					subdivisionLevel = 20
 					order = 201
 				}
 
