--- a/GameData/RealSolarSystem/RSSKopernicus/Mars/Mars.cfg
+++ b/GameData/RealSolarSystem/RSSKopernicus/Mars/Mars.cfg
@@ -10,7 +10,7 @@
 		Template
 		{
 			name = Duna
-			removePQSMods = PQSLandControl, PQSMod_VoronoiCraters, PQSMod_FlattenArea, PQSMod_VertexHeightNoiseVertHeightCurve2, PQSMod_MapDecal, PQSMod_AltitudeAlpha
+			removeAllPQSMods = true
 		}
 		Orbit
 		{
@@ -410,6 +410,11 @@
 
 			Mods
 			{
+				Subdivide
+				{
+					subdivisionLevel = 20
+					order = 9999999
+				}
 				VertexHeightMapRSS
 				{
 					map = RSS-Textures/PluginData/MarsHeight.dds
